# gurted

./: .gitignore  README.md  SPEC.md  icon.svg.import  project.godot
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-flumi.yml  build-gdextension.yml  build-gurtca.yml  build-gurty.yml  package-release.yml
Assets/: gurted.svg.import
Assets/Icons/: 23x23-empty.svg.import  arrow-down.svg.import  arrow-right.svg.import  arrow-up.svg.import  calendar.svg.import  calendar_16x16.svg.import  checkbox.svg.import  checkbox_disabled.svg.import  checkbox_pressed_16x16.svg.import  chevron-down.svg.import  chevron-down_dark.svg.import  chevron-up.svg.import  chevron-up_dark.svg.import  grabber.svg.import  grabber_16x16_active.svg.import  radio.svg.import  radio_checked_16x16.svg.import  radio_checked_grayscale_16x16.svg.import  radio_disabled.svg.import  radio_disabled_16x16.svg.import  x.svg.import
Icons/: arrow-left.svg.import  arrow-right.svg.import  chevron-down.svg.import  plus.svg.import  rotate-cw.svg.import  search.svg.import  x.svg.import
Ref/: methods.gd  methods.gd.uid
Scenes/: Tab.tscn  main.tscn
Scenes/Styles/: BrowserText.tres  CloseButtonHover.tres  CloseButtonNormal.tres  TabDefault.tres  TabGradientInactive.tres  TabHover.tres  TabHoverDefault.tres  TabNormal.tres
Scenes/Tags/: bold.tscn  br.tscn  button.tscn  code.tscn  div.tscn  h1.tscn  h2.tscn  h3.tscn  h4.tscn  h5.tscn  h6.tscn  img.tscn  input.tscn  input.tscn8601746517.tmp  italic.tscn  li.tscn  mark.tscn  new_button_group.tres  ol.tscn  option.tscn  p.tscn  pre.tscn  select.tscn  separator.tscn  small.tscn  span.tscn  textarea.tscn  underline.tscn
Scripts/: AutoSizingFlexContainer.gd  AutoSizingFlexContainer.gd.uid  Constants.gd  Constants.gd.uid  FontManager.gd  Network.gd.uid  ResizableTextEdit.gd.uid  StyleManager.gd  Tab.gd  TabContainer.gd  main.gd  main.gd.uid  youtube.png.import
Scripts/B9/: CSSParser.gd  CSSParser.gd.uid  HTMLParser.gd
Scripts/Tags/: bold.gd  bold.gd.uid  br.gd  button.gd  button.gd.uid  code.gd  code.gd.uid  div.gd  font.gd.uid  form.gd  form.gd.uid  h1.gd  h1.gd.uid  h2.gd  h2.gd.uid  h3.gd  h3.gd.uid  h4.gd  h4.gd.uid  h5.gd  h5.gd.uid  h6.gd  h6.gd.uid  img.gd.uid  input.gd  input.gd.uid  italic.gd  italic.gd.uid  li.gd  mark.gd  mark.gd.uid  ol.gd  ol.gd.uid  option.gd  p.gd  pre.gd  pre.gd.uid  select.gd  small.gd  small.gd.uid  (+8 more)
Scripts/Utils/: BackgroundUtils.gd  BackgroundUtils.gd.uid  ColorUtils.gd  SizingUtils.gd  UtilityClassValidator.gd  UtilityClassValidator.gd.uid
addons/DatePicker/: Calendar.cs.uid  Calendar.gd.uid  DateButton.gd  DateButton.gd.uid  ICalendarView.cs.uid  ICalendarView.gd  ICalendarView.gd.uid  MonthView.gd.uid  MonthView.tscn  YearView.cs.uid  YearView.gd  YearView.tscn
addons/SmoothScroll/: SmoothScrollContainer.gd
addons/godot-flexbox/: flex_container.gd.uid  plugin.cfg  plugin.gd
dns/: Cargo.toml  Dockerfile  README.md  build.sh  config.template.toml  docker-compose.yml
dns/frontend/: clanker.txt  dashboard.html  dashboard.lua  domain.html  domain.lua  index.html  register.html  register.lua  script.lua  signup.html  signup.lua
dns/migrations/: 001_initial.sql  002_remove_email.sql  002_remove_ip_requirement.sql  003_add_ns_records.sql  003_fix_timestamp_types.sql  004_add_domain_invite_codes.sql  004_fix_record_types.sql  005_add_certificate_challenges.sql  005_add_dns_records.sql  007_cleanup_invalid_records.sql  008_add_ca_storage.sql  009_add_csr_to_challenges.sql  010_add_search_crawl_status.sql
dns/src/: auth.rs  crypto.rs  discord_bot.rs  gurt_server.rs  http.rs  main.rs
dns/src/config/: mod.rs  structs.rs
dns/src/gurt_server/: auth_routes.rs  ca.rs  helpers.rs  models.rs  routes.rs
dns/src/http/: auth_routes.rs  helpers.rs  models.rs  routes.rs
docs/: README.md  docusaurus.config.ts  package-lock.json  sidebars.ts
docs/docs/: css.mdx  dns-system.md  (+9 more)
flumi/: .gitignore  CLAUDE.md  README.md  export_presets.cfg  icon.svg.import  project.godot
godotgif/: godotgif.gdextension.uid
protocol/: README.md
protocol/cli/: Cargo.toml  README.md  gurty.service  gurty.template.toml  gurty.toml  install.sh
protocol/cli/src/: cli.rs  command_handler.rs  config.rs  error.rs  handlers.rs  lib.rs  main.rs  request_handler.rs  security.rs  server.rs
protocol/cli/templates/: 404.html  directory_content_start.html  directory_listing_end.html  directory_listing_start.html  directory_parent_link.html  error.html
protocol/gdextension/: .gitignore  Cargo.toml  README.md  build.sh  plugin.gd
protocol/gdextension/src/: lib.rs
protocol/gurtca/: Cargo.toml
protocol/gurtca/src/: challenges.rs  client.rs  crypto.rs  main.rs
search-engine/: Cargo.toml  Dockerfile  README.md  build.sh  config.template.toml  docker-compose.yml
search-engine/frontend/: search.html  search.lua
search-engine/src/: config.rs  crawler.rs  indexer.rs  main.rs  models.rs  scheduler.rs  server.rs
site/: README.md  components.json  package-lock.json  package.json
tests/: add-remove-child.html  attribute.html  audio.html  canvas.html  center-and-button.html  clanker.txt  clipboard.html  crumbs.html  css-selector.html  dashboard.html  dom-utils.html  download.html  index.html  input-events.html  interval-and-network.html  lua-api.html  network-and-json.html  object-fit.html  signal.html  snake.html  transform.html  tween.html  websocket.html
(+348 files in other folders)
