[package]
name = "gurted-search-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
futures = "0.3.30"
tantivy = "0.22"
sha2 = "0.10"
gurtlib = { path = "../protocol/library" }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
scraper = "0.20"
lol_html = "1.2"
url = "2.5"
toml = "0.8.13"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0.86"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }
regex = "1.10.4"
mime = "0.3"
base64 = "0.22"
glob = "0.3"
clap = { version = "4.5.4", features = ["derive"] }
urlencoding = "2.1"
reqwest = "0.11"
