[package]
name = "gurty"
version = "0.1.0"
edition = "2021"
authors = ["FaceDev"]
license = "MIT"
repository = "https://github.com/outpoot/gurted"
description = "GURT protocol server CLI tool"

[[bin]]
name = "gurty"
path = "src/main.rs"

[dependencies]
gurt = { path = "../library" }

tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
mime_guess = "2.0"