[package]
name = "gurt-godot"
version = "0.1.0"
edition = "2021"
authors = ["FaceDev"]
license = "MIT"
repository = "https://github.com/outpoot/gurted"
description = "GURT protocol GDExtension for Godot"

[lib]
name = "gurt_godot"
crate-type = ["cdylib"]

[dependencies]
gurt = { path = "../library" }

godot = "0.1"

tokio = { version = "1.0", features = [
    "net",
    "io-util", 
    "rt",
    "time"
] }
tokio-rustls = "0.26"
rustls-native-certs = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
url = "2.5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true